--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
     "express-rate-limiter": "^1.3.1",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0"
   },
