--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,9 @@
     "mongoose": "^7.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@babel/preset-env": "^7.22.4",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
